Updated drill box since try me wasn't displaying properly

--- a/src/components/product/boxDrill/box-drill.scss
+++ b/src/components/product/boxDrill/box-drill.scss
@@ -16,7 +16,7 @@
   }
 
   .try-me {
-    background-image: url('./try-me-min.png');
+    background-image: url('./try-me-drill-min.png');
     background-position: bottom;
     width: 600px;
     height: 400px;
@@ -94,16 +94,16 @@
       background-image: url('./rivet-container-small.min.svg');
       left: 121px;
       top: 209px;
-      width: 48px;
-      height: 48px;
+      width: 49px;
+      height: 49px;
     }
 
     .rivet-container-large {
       background-image: url('./rivet-container-large.min.svg');
       top: 210px;
       left: 188px;
-      width: 48px;
-      height: 48px;
+      width: 49px;
+      height: 49px;
     }
 
     .sacrificial {
