moved dots to common, made dots clickable, made hero a carousel, added excellon to specifications, updated faq wording, removed BenefitsSelector from main page, moved customer quotes to technology

--- a/src/components/main/summary/summary.scss
+++ b/src/components/main/summary/summary.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
 .summary-wrapper {
-  background-color: $medium-grey;
+  background-color: $black;
 }
 .summary h2 {
   line-height: 2em;
