--- a/src/components/main/summary/summary.scss
+++ b/src/components/main/summary/summary.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
 .summary-wrapper {
-  background-color: $black;
+  background-color: $medium-grey;
 }
 .summary h2 {
   line-height: 2em;
