Fixed blog formatting, updated drill main video, adjusted drill price, tried to fix drill in the box

--- a/src/components/product/boxDrill/box-drill.scss
+++ b/src/components/product/boxDrill/box-drill.scss
@@ -15,14 +15,14 @@
     max-width: 500px;
   }
 
-  .try-me {
+  .try-me-drill {
     background-image: url('./try-me-drill-min.png');
     background-position: bottom;
     width: 600px;
     height: 400px;
   }
 
-  .try-me:hover {
+  .try-me-drill:hover {
     cursor: pointer;
   }
 
