--- a/src/components/product/boxDrill/boxdrill.scss
+++ b/src/components/product/boxDrill/boxdrill.scss
@@ -1,3 +1,5 @@
+@import 'src/css/colors';
+
 .box-wrapper-drill {
 
   h2 {
@@ -30,94 +32,94 @@
     height: 400px;
     position: relative;
     flex-shrink: 0;
+  }
 
-    .outline {
-      opacity: 0;
-      cursor: pointer;
-      background-repeat: no-repeat;
-      background-position: top;
-      position: absolute;
-    }
+  .outline {
+    opacity: 0;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-position: top;
+    position: absolute;
+  }
 
-    .outline:hover {
-      opacity: 1;
-    }
+  .outline:hover {
+    opacity: 1;
+  }
 
-    .visible {
-      opacity: 1;
-    }
+  .visible {
+    opacity: 1;
+  }
 
-    .drill {
-      background-image: url('./drill.min.svg');
-      top: 153px;
-      left: 273px;
-      width: 53px;
-      height: 118px;
-    }
+  .drill {
+    background-image: url('./drill.min.svg');
+    top: 153px;
+    left: 273px;
+    width: 53px;
+    height: 118px;
+  }
 
-    .drill-bit-container {
-      background-image: url('./drill-bit-container.min.svg');
-      left: 119px;
-      top: 117px;
-      width: 116px;
-      height: 79px;
-    }
+  .drill-bit-container {
+    background-image: url('./drill-bit-container.min.svg');
+    left: 119px;
+    top: 117px;
+    width: 116px;
+    height: 79px;
+  }
 
-    .small-substrate {
-      background-image: url('./small-Substrate.min.svg');
-      left: 415px;
-      top: 170px;
-      width: 102px;
-      height: 68px;
-    }
+  .small-substrate {
+    background-image: url('./small-Substrate.min.svg');
+    left: 415px;
+    top: 170px;
+    width: 102px;
+    height: 68px;
+  }
 
-    .large-substrate {
-      background-image: url('./large-substrate.min.svg');
-      left: 399px;
-      top: 153px;
-      width: 134px;
-      height: 102px;
-    }
+  .large-substrate {
+    background-image: url('./large-substrate.min.svg');
+    left: 399px;
+    top: 153px;
+    width: 134px;
+    height: 102px;
+  }
 
-    .rivet-tools {
-      background-image: url('./rivet-tools.min.svg');
-      top: 265px;
-      left: 125px;
-      width: 102px;
-      height: 23px;
-    }
+  .rivet-tools {
+    background-image: url('./rivet-tools.min.svg');
+    top: 265px;
+    left: 125px;
+    width: 102px;
+    height: 23px;
+  }
 
-    .rivet-container-small {
-      background-image: url('./rivet-container-small.min.svg');
-      left: 121px;
-      top: 209px;
-      width: 49px;
-      height: 49px;
-    }
+  .rivet-container-small {
+    background-image: url('./rivet-container-small.min.svg');
+    left: 121px;
+    top: 209px;
+    width: 49px;
+    height: 49px;
+  }
 
-    .rivet-container-large {
-      background-image: url('./rivet-container-large.min.svg');
-      top: 210px;
-      left: 188px;
-      width: 49px;
-      height: 49px;
-    }
+  .rivet-container-large {
+    background-image: url('./rivet-container-large.min.svg');
+    top: 210px;
+    left: 188px;
+    width: 49px;
+    height: 49px;
+  }
 
-    .sacrificial {
-      background-image: url('./sacrificial.min.svg');
-      top: 124px;
-      left: 359px;
-      width: 211px;
-      height: 160px;
-    }
+  .sacrificial {
+    background-image: url('./sacrificial.min.svg');
+    top: 124px;
+    left: 359px;
+    width: 211px;
+    height: 160px;
+  }
 
-    .safety-glasses {
-      background-image: url('./safety-glasses.min.svg');
-      top: 121px;
-      left: 25px;
-      width: 67px;
-      height: 168px;
-    }
+  .safety-glasses {
+    background-image: url('./safety-glasses.min.svg');
+    top: 121px;
+    left: 25px;
+    width: 67px;
+    height: 168px;
   }
 }
 
