debugging, made it box-drill-wrapper narrow

--- a/src/components/product/boxDrill/help.scss
+++ b/src/components/product/boxDrill/help.scss
@@ -1,109 +1,3 @@
-.box-wrapper-drill h2 {
-  text-align: left;
-}
-.box-wrapper-drill .mobile-contents p {
-  line-height: 1.4em;
-}
-.box-wrapper-drill .description {
-  max-width: 500px;
-}
-.box-wrapper-drill .try-me-drill {
-  background-image: url("./try-me-drill-min.png");
-  background-position: bottom;
-  width: 600px;
-  height: 400px;
-}
-.box-wrapper-drill .try-me-drill:hover {
-  cursor: pointer;
-}
-.box-wrapper-drill .in-the-box {
-  background-image: url("/drill-box-min.png");
-  background-position: bottom;
-  width: 600px;
-  height: 400px;
-  position: relative;
-  flex-shrink: 0;
-}
-.box-wrapper-drill .outline {
-  opacity: 0;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: top;
-  position: absolute;
-}
-.box-wrapper-drill .outline:hover {
-  opacity: 1;
-}
-.box-wrapper-drill .visible {
-  opacity: 1;
-}
-.box-wrapper-drill .drill {
-  background-image: url("./drill.min.svg");
-  top: 153px;
-  left: 273px;
-  width: 53px;
-  height: 118px;
-}
-.box-wrapper-drill .drill-bit-container {
-  background-image: url("./drill-bit-container.min.svg");
-  left: 119px;
-  top: 117px;
-  width: 116px;
-  height: 79px;
-}
-.box-wrapper-drill .small-substrate {
-  background-image: url("./small-Substrate.min.svg");
-  left: 415px;
-  top: 170px;
-  width: 102px;
-  height: 68px;
-}
-.box-wrapper-drill .large-substrate {
-  background-image: url("./large-substrate.min.svg");
-  left: 399px;
-  top: 153px;
-  width: 134px;
-  height: 102px;
-}
-.box-wrapper-drill .rivet-tools {
-  background-image: url("./rivet-tools.min.svg");
-  top: 265px;
-  left: 125px;
-  width: 102px;
-  height: 23px;
-}
-.box-wrapper-drill .rivet-container-small {
-  background-image: url("./rivet-container-small.min.svg");
-  left: 121px;
-  top: 209px;
-  width: 49px;
-  height: 49px;
-}
-.box-wrapper-drill .rivet-container-large {
-  background-image: url("./rivet-container-large.min.svg");
-  top: 210px;
-  left: 188px;
-  width: 49px;
-  height: 49px;
-}
-.box-wrapper-drill .sacrificial {
-  background-image: url("./sacrificial.min.svg");
-  top: 124px;
-  left: 359px;
-  width: 211px;
-  height: 160px;
-}
-.box-wrapper-drill .safety-glasses {
-  background-image: url("./safety-glasses.min.svg");
-  top: 121px;
-  left: 25px;
-  width: 67px;
-  height: 168px;
-}
-
-@media (max-width: 600px) {
-  .box-wrapper-drill img {
-    width: 100%;
-    height: auto;
-  }
+.box-wrapper-drill {
+  max-width: 300px;
 }
