--- a/src/components/product/boxDrill/help.scss
+++ b/src/components/product/boxDrill/help.scss
@@ -1,3 +1,35 @@
+
 .box-wrapper-drill {
-  max-width: 300px;
+
+  h2 {
+    text-align: left;
+  }
+
+  .mobile-contents p {
+    line-height: 1.4em;
+  }
+
+  .description {
+    max-width: 500px;
+  }
+
+  .try-me-drill {
+    background-image: url('./try-me-drill-min.png');
+    background-position: bottom;
+    width: 600px;
+    height: 400px;
+  }
+
+  .try-me-drill:hover {
+    cursor: pointer;
+  }
+
+  .in-the-box {
+    background-image: url('/drill-box-min.png');
+    background-position: bottom;
+    width: 600px;
+    height: 400px;
+    position: relative;
+    flex-shrink: 0;
+  }
 }
