debugging part 3, corrected s

--- a/src/components/product/boxDrill/boxDrill.scss
+++ b/src/components/product/boxDrill/boxDrill.scss
@@ -66,51 +66,51 @@
   }
 
 
-    .small-substrate {
-      background-image: url('./small-Substrate.min.svg');
-      left: 415px;
-      top: 170px;
-      width: 102px;
-      height: 68px;
-    }
+  .small-substrate {
+    background-image: url('./small-substrate.min.svg');
+    left: 415px;
+    top: 170px;
+    width: 102px;
+    height: 68px;
+  }
 
-    .large-substrate {
-      background-image: url('./large-substrate.min.svg');
-      left: 399px;
-      top: 153px;
-      width: 134px;
-      height: 102px;
-    }
+  .large-substrate {
+    background-image: url('./large-substrate.min.svg');
+    left: 399px;
+    top: 153px;
+    width: 134px;
+    height: 102px;
+  }
 
-    .rivet-tools {
-      background-image: url('./rivet-tools.min.svg');
-      top: 265px;
-      left: 125px;
-      width: 102px;
-      height: 23px;
-    }
+  .rivet-tools {
+    background-image: url('./rivet-tools.min.svg');
+    top: 265px;
+    left: 125px;
+    width: 102px;
+    height: 23px;
+  }
 
-    .rivet-container-small {
-      background-image: url('./rivet-container-small.min.svg');
-      left: 121px;
-      top: 209px;
-      width: 49px;
-      height: 49px;
-    }
+  .rivet-container-small {
+    background-image: url('./rivet-container-small.min.svg');
+    left: 121px;
+    top: 209px;
+    width: 49px;
+    height: 49px;
+  }
 
-    .rivet-container-large {
-      background-image: url('./rivet-container-large.min.svg');
-      top: 210px;
-      left: 188px;
-      width: 49px;
-      height: 49px;
-    }
+  .rivet-container-large {
+    background-image: url('./rivet-container-large.min.svg');
+    top: 210px;
+    left: 188px;
+    width: 49px;
+    height: 49px;
+  }
 
-    .sacrificial {
-      background-image: url('./sacrificial.min.svg');
-      top: 124px;
-      left: 359px;
-      width: 211px;
-      height: 160px;
-    }
+  .sacrificial {
+    background-image: url('./sacrificial.min.svg');
+    top: 124px;
+    left: 359px;
+    width: 211px;
+    height: 160px;
+  }
 }
