--- a/src/components/blog/welcome/welcome.scss
+++ b/src/components/blog/welcome/welcome.scss
@@ -13,9 +13,11 @@
 
   h1 {
     color: $white;
+    font-size: 2.5em;
   }
   p {
     color: $white;
     text-align: center;
+    font-size: 1.1em;
   }
 }
