Added drill back to store and hero. Kept coming soon. Updated gatsby

--- a/src/components/store/cart/cart.scss
+++ b/src/components/store/cart/cart.scss
@@ -6,7 +6,7 @@
   .promo {
 
     text-align: center;
-    padding: 5px 0px;
+    padding: 5px $small-padding;
     background-color: $light-grey;
     margin-bottom: $small-padding;
 
