Updated question in drilling FAQ, updated about us section, updated quote request form and added more text fields

--- a/src/components/request/common.scss
+++ b/src/components/request/common.scss
@@ -96,9 +96,27 @@
     text-align: center;
     margin: $small-padding 0px;
   }
+
+  .checkboxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  label {
+    user-select: none;
+  }
 }
 
 
 .request .wrapper p {
   margin: 3px;
+}
+
+
+@media (max-width: $mobile-threshold) {
+  .request .checkboxes {
+    justify-content: flex-start;
+  }
 }
