--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -7,6 +7,15 @@
   height: 500px;
 }
 
+.about {
+  max-width: 800px;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 @media (max-width: $mobile-threshold) {
   .about-image {
     height: 200px;
