--- a/src/components/common/spinnerLoader/spinnerLoader.scss
+++ b/src/components/common/spinnerLoader/spinnerLoader.scss
@@ -6,13 +6,11 @@
   width: 200px;
 }
 
-.loader,
-.loader:after {
+.loader {
   border-radius: 50%;
   width: 10em;
   height: 10em;
-}
-.loader {
+
   margin: auto;
   font-size: 10px;
   border-top: 1.1em solid $voltera-blue;
@@ -26,6 +24,16 @@
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
 }
+
+.loader.mini {
+  width: 2.5em;
+  height: 2.5em;
+  border-top: 0.5em solid $voltera-blue;
+  border-right: 0.5em solid $voltera-blue;
+  border-bottom: 0.5em solid $voltera-blue;
+  border-left: 0.5em solid $voltera-green;
+}
+
 @-webkit-keyframes load8 {
   0% {
     -webkit-transform: rotate(0deg);
