--- a/src/components/store/utils/productSnippet/productSnippet.scss
+++ b/src/components/store/utils/productSnippet/productSnippet.scss
@@ -1,29 +1,50 @@
 @import 'src/css/colors';
 
-  .product-snippet {
-    width: 230px;
-    border-radius: 10px;
-    margin: $small-padding 10px;
-    padding: $small-padding $small-padding;
-    
-  }
 
-  .product-snippet:hover {
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+.product-snippet {
+  width: 230px;
+  border-radius: 10px;
+  margin: 5px 10px;
+  padding: $small-padding $small-padding;
+
+  a {
     text-decoration: none;
   }
 
-  .product-snippet .price {
+  img {
+    width: auto;
+    height: auto;
+    max-height: 155px;
+  }
+
+  .price {
     color: $voltera-green;
     margin: 0px;
   }
 
-  .product-snippet .description {
+  .description {
     color: $soft-grey;
     font-size: 0.8em;
+    min-height: 70px;
   }
 
-  .product-snippet img {
-    width: 100%;
-    height: auto;
+  .add-to-cart {
+    opacity: 0;
+    transition: all $t-time ease-in-out 0s;
   }
+}
+
+.product-snippet:hover {
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+
+    .add-to-cart {
+      opacity: 1
+    }
+}
+
+.product-snippet .long {
+    width: 100%;
+    border-radius: 25px;
+    text-align: center;
+    box-sizing: border-box;
+}
