Migrated all images to 'import asset from' way, apparently it is better. Created 4 new landing pages and gave the thank you page a unique URL

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,7 +1,7 @@
 @import 'src/css/colors';
 
 .about-image {
-  background-image: url('/v-one-assembly.jpg');
+  background-image: url('./v-one-assembly.jpg');
   background-position: center;
   background-size: cover;
   height: 500px;
