--- a/src/components/product/box/box.scss
+++ b/src/components/product/box/box.scss
@@ -25,7 +25,7 @@
   }
 
   .in-the-box{
-    background-image: url('/v-one-box-min.png');
+    background-image: url('./v-one-box-min.png');
     background-position: bottom;
     width: 600px;
     height: 400px;
