--- a/src/components/product/boxDrill/boxDrill.scss
+++ b/src/components/product/boxDrill/boxDrill.scss
@@ -26,7 +26,7 @@
   }
 
   .in-the-box {
-    background-image: url('/drill-box-min.png');
+    background-image: url('./drill-box-min.png');
     background-position: bottom;
     width: 600px;
     height: 400px;
