--- a/src/components/docs/sidebar/articles/articles.module.scss
+++ b/src/components/docs/sidebar/articles/articles.module.scss
@@ -5,6 +5,7 @@
     display: block;
     padding: 10px;
     margin: 5px 0px;
+    //font-weight: 600;
 
     border-radius: 5px;
     transition: all $t-time ease-in-out 0s;
