--- a/src/components/request/common.scss
+++ b/src/components/request/common.scss
@@ -1,4 +1,4 @@
-@import 'src/css/colors';
+@import "src/css/colors";
 
 .request-wrapper {
   padding: $medium-padding $small-padding;
@@ -23,7 +23,7 @@
   border-radius: 10px;
   box-shadow: 0px 0px 15px 0px black;
 
-    h3 {
+  h3 {
     border-bottom-style: solid;
     border-bottom-color: $voltera-green;
     border-bottom-width: 1px;
@@ -31,7 +31,7 @@
     margin-top: 40px;
   }
 
-    img {
+  img {
     max-width: 100%;
     height: auto;
   }
@@ -62,7 +62,9 @@
     }
   }
 
-  input, textarea, select {
+  input,
+  textarea,
+  select {
     border-style: solid;
     border-width: 1px;
     border-color: grey;
@@ -90,7 +92,8 @@
     flex-grow: 0;
   }
 
-  .wide-select,.time-select {
+  .wide-select,
+  .time-select {
     margin: 3px;
     flex-grow: 1;
     flex-shrink: 1;
@@ -104,7 +107,6 @@
   label {
     user-select: none;
   }
-
 
   .circle-wrapper {
     display: flex;
@@ -132,11 +134,9 @@
   }
 }
 
-
 .request .wrapper p {
   margin: 3px;
 }
-
 
 @media (max-width: $mobile-threshold) {
   .request {
