--- a/src/components/product/software.module.scss
+++ b/src/components/product/software.module.scss
@@ -1,4 +1,4 @@
-@import "src/css/colors";
+@import 'src/css/colors';
 
 .screenshot {
   box-shadow: 0px 0px 10px 0px black;
@@ -30,11 +30,23 @@
   color: $white;
 }
 
+.download-wrapper {
+  background-color: $medium-grey;
+}
+.download h2 {
+  line-height: 2em;
+  color: $white;
+}
+
 @media (max-width: $mobile-threshold) {
   .navigation.left {
     transform: rotate(90deg);
   }
   .navigation.right {
     transform: rotate(90deg);
+  }
+
+  .download h2 {
+    font-size: 1.3em;
   }
 }
