--- a/src/components/contact/inTouch/intouch.scss
+++ b/src/components/contact/inTouch/intouch.scss
@@ -5,7 +5,9 @@
   margin: auto;
 
   justify-content: center;
-
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .in-touch .action {
@@ -19,6 +21,6 @@
 }
 
 .in-touch img {
-    width: 60px;
-    height: 60px;
+  width: 60px;
+  height: 60px;
 }
